[Bugfix] scrolling by clicking the scrollbar
Requires three clicks before panning to the target destination

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
   }
 
   .content-1SgpWY {
-    width: calc(300vw - 215px);
+    width: calc(300vw - 218px);
   }
 
   .content-1SgpWY > div:nth-child(1) {
@@ -49,7 +49,7 @@
   }
 
   .sidebar-1tnWFu {
-    width: calc(100vw - 70px);
+    width: calc(100vw - 73px);
   }
 
   main.chatContent-3KubbW {
